2009-03-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/apply.boot, src/interp/sys-pkg.lisp,
	src/interp/patches.lisp, src/interp/cformat.boot,
	src/interp/msgdb.boot, src/interp/nruncomp.boot,
	src/interp/setvars.boot, src/interp/postpar.boot,
	src/interp/wi2.boot, src/interp/util.lisp,
	src/interp/msg.boot, src/interp/comp.lisp,
	src/interp/format.boot, src/interp/define.boot,
	src/interp/htsetvar.boot, src/interp/vmlisp.lisp:
	Misc cleanups.

2009-03-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/g-boot.boot: Fix breakage from revision 554.

2009-03-26  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* src/interp/i-funsel.boot, src/share/doc/msgs/s2-us.msgs:
	Select function based on type from context.
	src/input/bugs2009.input.pamphlet: Add test.

2009-03-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/comp.lisp: convert functions to Boot
	and move to
	src/interp/g-boot.boot: here.
	src/interp/i-analy.boot, src/interp/def.lisp,
	src/interp/compiler.boot: Adjust.

2009-03-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/info.boot, src/interp/nruncomp.boot:
	Speed up compilation of EXPEXPAN.spad.

2009-03-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: compWithMappingMode(): supress
	bogus warnings about parameters having no value.

2009-03-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot, src/interp/define.boot,
	src/interp/newaux.lisp, src/interp/property.lisp:
	Support '+->' and nested functions.

2009-03-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/info.boot, src/interp/category.boot,
	src/interp/wi2.boot, src/interp/functor.boot,
	src/interp/define.boot: Misc cleanups.

2009-03-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/axext_l.lisp, src/interp/category.boot,
	src/interp/database.boot, src/interp/define.boot,
	src/interp/htcheck.boot, src/interp/i-intern.boot,
	src/interp/i-output.boot, src/interp/i-spec2.boot,