@@ -1,3 +1,12 @@
+2009-04-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	Add beginning of new compiler.
+	* src/interp/ncomp.boot: New file.
+	src/interp/bootlex.lisp: Init per-file macro hash table.
+	src/interp/spad.lisp: Call function from ncomp if
+	requested.
+	src/interp/Makefile.in : Add ncomp.
+
 2009-03-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/apply.boot, src/interp/sys-pkg.lisp,
